# ai-routing

./: .gitignore  README.md  pyproject.toml
analysis/: bm1_provider_cadence.parquet  bm1_summary.json  bm2_reaction_panel.parquet  bm2_summary.json  bm3_premium_coefficients.parquet  bm3_summary.json  bm4_provider_slopes.parquet  bm4_reaction_rules.parquet  bm4_summary.json  bm5_model_comparison.parquet  bm5_summary.json  cbh10_summary.json  cbh11_summary.json  cbh12_summary.json  cbh13_summary.json  cbh14_summary.json  cbh15_summary.json  cbh16_summary.json  cbh1_census.parquet  cbh1_summary.json  cbh2_gap_by_n.parquet  cbh2_summary.json  cbh3_summary.json  cbh4_events.parquet  cbh4_summary.json  cbh5_summary.json  cbh6_summary.json  cbh7_summary.json  cbh8_summary.json  cbh9_summary.json  contestable_adaptive_panel.parquet  contestable_elasticity_panel.parquet  contestable_entry_panel.parquet  contestable_entry_summary.json  contestable_learning_panel.parquet  cow_solver_hhi_monthly.parquet  endpoint_integrity_audit.json  endpoint_integrity_audit_post_repair.json  endpoint_integrity_repair_dry_run.json  h10_endpoint_ll.parquet  (+211 more)
config/: adaptive_adversarial_v1.toml  adaptive_adversarial_v2.toml  adaptive_adversarial_v3.toml  direct_model_maps.toml  eval_battery.toml  experiment_gates.toml  fee_pages.toml  glm52_market_share_hmp_v1.toml  gpu_venue_map.toml  h94_cross_router_pass_through.toml  hmp_signal_coupling_v1.toml  information_congestion_v1.toml  instruments.toml  lab_status.toml  paper_evidence_registry.toml  provider_type_validation_v1.toml  quote_pulse.toml  router_model_map.toml  router_registry.toml  score_memory_v1.toml  sources.toml  strategic_routing_v1.toml  undercutting_incidence_v1.toml  welfare_conjecture_gates.toml  within_type_collusion_v1.toml
data-static/: eval_items.jsonl  gpu_forward_anchors.csv  gpu_index_periods.csv  provider_capital.csv  provider_tags.csv
docs/: adaptive-router-adversarial-screening-results-2026-07-20.md  adaptive-router-adversarial-validation-plan-2026-07-20.md  (+106 more)
(+751 files in other folders)
