[project]
name = "orcap"
version = "0.1.0"
description = "OpenRouter market-history capture: per-provider pricing, models, apps, activity, uptime"
readme = "README.md"
authors = [
    { name = "Tarun Chitra", email = "tarun@gauntlet.network" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pyarrow>=17",
    "duckdb>=1.1",
    "huggingface-hub>=0.26",
    "tenacity>=9",
    "playwright>=1.48",
    "statsmodels>=0.14.6",
    "scipy>=1.18.0",
    "lifelines>=0.30.3",
    "matplotlib>=3.11.0",
    "pandas>=2.3.3",
    "google-cloud-bigquery>=3.42.1",
    "db-dtypes>=1.7.0",
    "scikit-learn>=1.9.0",
    "lxml>=6.1.1",
]

[project.optional-dependencies]
bittensor = [
    "bittensor==10.5.0",
]

[project.scripts]
orcap = "orcap.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running convergence or integration experiment"]

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"
